--- a/setup.cfg
+++ b/setup.cfg
@@ -1,14 +1,14 @@
 [metadata]
 name = KingPaint
-version = 1.0
+version = 1.1
 author = KingAirC
 author_email = 1904192877@qq.com
-description = GeoGebra writen in Python
+description = Interactive paint aim to learn geometry
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/KingAirC/PyGeoGebra
+url = https://github.com/KingAirC/KingPaint
 project_urls =
-    Bug Tracker = https://github.com/KingAirC/PyGeoGebra/issues
+    Bug Tracker = https://github.com/KingAirC/KingPaint/issues
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
